# inkwell

./: README.md  canvas-feature-design.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  table-test.html  tailwind.config.ts  vite.config.ts  welcome.md
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: release.yml
graphify-out/: .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json
graphify-out/2026-07-04/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-07-07/: manifest.json
graphify-out/2026-07-09/: GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-07-10/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-07-11/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/cache/: stat-index.json
public/: excalidraw-frame.html
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  quick-note.json
src-tauri/github-mcp/: Cargo.toml
src-tauri/github-mcp/src/: main.rs
src-tauri/icons/: icon.icns
src-tauri/mcp-server/: Cargo.toml
src-tauri/mcp-server/src/: main.rs
src-tauri/src/: lib.rs  main.rs
src/lib/: attachments.ts  deleteActions.ts  editorExtensions.ts  editorFormatting.ts  editorTypography.ts  export.ts  fs.ts  github.ts  images.ts  noteReferences.tsx  noteSelection.ts  remarkHighlight.ts  searchHighlightExtension.ts  shortcuts.ts  themeUtils.ts  themes.ts  updateCheck.ts  utils.ts  vault.ts
src/store/: useAppStore.ts
(+44 files in other folders)
