[workspace]
members = [".", "mcp-server", "github-mcp"]
resolver = "2"

[package]
name = "inkwell"
version = "0.7.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "inkwell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset", "tray-icon"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = "=0.3.36"

[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.7"
