[package]
name = "github-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for GitHub — manage READMEs and sync project docs"

[[bin]]
name = "github-mcp"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
base64 = "0.22"
